committed some changes

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
          color:white;
      }
      .main-menu {
-     margin: 0 -9999px;
-     padding: 0 9999px;
+     margin:none;
+     padding:none;
     }
     
     .main-menu ul {
